[project]
name = "finbourne-sdk"
version = "0.1.52"
description = "This is the Python SDK for all of FINBOURNE's APIs"
authors = [
    {name = "Finbourne Technology LTD", email = "info@finbourne.com"}
]
license = {text = "MIT"}

readme = "README.md"
requires-python = ">=3.11"
keywords = ["OpenAPI", "OpenAPI-Generator", "Merged OpenAPI Specification", "finbourne-sdk"]
dependencies = [
    "urllib3>=2.7.0,<3.0.0",
    "python-dateutil>=2.8.2,<3.0.0",
    "requests>=2.32.4,<3.0.0",
    "aiohttp>=3.13.4,<4.0.0",
    "pydantic>=2.6.3,<3.0.0",
    "aenum>=3.1.11,<4.0.0",
    "typing_extensions>=4.6.0",
]

[project.urls]
Repository = "https://github.com/finbourne/finbourne-sdk-python.git"

[project.optional-dependencies]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.15.12",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.21.0",
    "flake8>=4.0.0,<5.0.0",
    "xeger>=0.4,<1.0.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["finbourne"]

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"

[tool.ruff.lint]
ignore = [
    "F401",  # Unused imports - generated code imports a superset; each model uses a different subset
    "F811",  # Redefined unused - API templates have static + dynamic import blocks that overlap
    "E402",  # Module import not at top - intentional circular import workaround in models
]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportRedeclaration = false
reportInvalidTypeArguments = false
reportAttributeAccessIssue = "warning"